@@ -1,7 +1,7 @@
 affine>=1.3.0
 attrs>=16.0.0
 boto3>=1.2.4
-click==6.7
+click==7.0
 cligj>=0.5
 enum34
 numpy>=1.10
